--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,12 @@
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+html,
 body {
+  max-width: 100%;
+  overflow-x: hidden;
   margin: 0;
 }
